--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>積込時間計測モック（拡張版）</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    const CACHE_VERSION = 'v20240722-6';
+    const CACHE_VERSION = 'v20240722-7';
     const LAST_CACHE = localStorage.getItem('mock_cache_version');
     if (LAST_CACHE !== CACHE_VERSION) {
       localStorage.setItem('mock_cache_version', CACHE_VERSION);
@@ -20,9 +20,12 @@
   <div class="max-w-4xl mx-auto bg-white p-6 rounded-xl shadow space-y-6">
     <div class="flex justify-between items-center">
       <h1 class="text-2xl lg:text-xl font-bold text-blue-800">トラック積込時間 記録</h1>
-      <button onclick="location.reload(true)" class="text-sm text-white bg-gray-600 hover:bg-gray-700 px-3 py-1 rounded shadow">
-        🔄 Reload（最新版に更新）
-      </button>
+      <div class="flex items-center gap-3">
+        <a href="complete.html" class="text-blue-600 underline text-sm">✅ 完了済み一覧を見る</a>
+        <button onclick="location.reload(true)" class="text-sm text-white bg-gray-600 hover:bg-gray-700 px-3 py-1 rounded shadow">
+          🔄 Reload（最新版に更新）
+        </button>
+      </div>
     </div>
 
     <!-- 説明エリア -->
