--- a/complete.html
+++ b/complete.html
@@ -5,119 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>完了済み一覧</title>
   <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 p-6 text-base">
-  <div class="max-w-6xl mx-auto bg-white p-6 rounded-xl shadow space-y-6">
-    <h1 class="text-xl font-bold text-center text-blue-800">✅ 完了済み一覧</h1>
-
-    <!-- 検索条件エリア：1段目（日付） -->
-    <div class="flex flex-wrap items-center gap-3 text-sm mb-2">
-      <label for="searchDateFrom" class="font-medium text-gray-700 whitespace-nowrap">📅 日付</label>
-      <input id="searchDateFrom" type="date" class="p-2 border rounded" />
-      <span class="text-gray-500">〜</span>
-      <input id="searchDateTo" type="date" class="p-2 border rounded" />
-    </div>
-
-    <!-- 検索条件エリア：2段目（その他） -->
-    <div class="flex flex-wrap items-center gap-3 text-sm mb-4">
-      <input id="searchCar" type="text" class="p-2 border rounded" placeholder="車両番号で検索" />
-      <input id="searchCompany" type="text" class="p-2 border rounded" placeholder="運送会社で検索" />
-      <input id="searchTank" type="text" class="p-2 border rounded" placeholder="タンクNoで検索" />
-      <button onclick="filterRecords()" class="inline-flex items-center gap-2 bg-gradient-to-r from-blue-500 to-blue-600 text-white font-semibold py-2 px-4 rounded-full shadow hover:from-blue-600 hover:to-blue-700 transition">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16l-4-4m0 0l4-4m-4 4h16" /></svg>
-        検索する
-      </button>
-      <button onclick="exportCSV()" class="inline-flex items-center gap-2 bg-green-500 text-white font-semibold py-2 px-4 rounded-full shadow hover:bg-green-600 transition">
-        📄 CSV出力
-      </button>
-      <button onclick="copyToClipboard()" class="inline-flex items-center gap-2 bg-yellow-500 text-white font-semibold py-2 px-4 rounded-full shadow hover:bg-yellow-600 transition">
-        📋 クリップボード出力
-      </button>
-    </div>
-
-    <!-- 一覧テーブル -->
-    <div class="overflow-x-auto">
-      <table class="min-w-full table-auto border text-sm">
-        <thead>
-          <tr class="bg-gray-200 text-left">
-            <th class="p-2 border cursor-pointer" onclick="sortTable('date')">日付</th>
-            <th class="p-2 border cursor-pointer" onclick="sortTable('carNumber')">車両番号</th>
-            <th class="p-2 border cursor-pointer" onclick="sortTable('company')">運送会社</th>
-            <th class="p-2 border cursor-pointer" onclick="sortTable('tankNumber')">タンクNo.</th>
-            <th class="p-2 border cursor-pointer" onclick="sortTable('duration')">経過時間</th>
-            <th class="p-2 border">備考</th>
-          </tr>
-        </thead>
-        <tbody id="recordTable">
-          <!-- 動的に挿入 -->
-        </tbody>
-      </table>
-    </div>
-
-    <!-- 戻るリンク -->
-    <div class="mt-6 text-center">
-      <a href="index.html" class="text-blue-600 underline">← 記録画面に戻る</a>
-    </div>
-  </div>
-
   <script>
     let currentSortKey = null;
     let currentSortAsc = true;
-    let currentFilteredRecords = [];
 
     function loadRecords() {
-      let records = JSON.parse(localStorage.getItem("completedRecords") || "null");
-      if (!records) {
-        records = [
-          { date: "2025-07-22", carNumber: "静岡800あ12-34", company: "港運輸", tankNumber: "T-3", duration: "02:14", remarks: "朝一番の便" },
-          { date: "2025-07-21", carNumber: "浜松300い56-78", company: "清水急送", tankNumber: "T-5", duration: "03:09", remarks: "積載多め" },
-          { date: "2025-07-20", carNumber: "富士100う11-22", company: "甲府物流", tankNumber: "T-1", duration: "02:45", remarks: "" }
-        ];
-        localStorage.setItem("completedRecords", JSON.stringify(records));
-      }
-      return records;
+      return JSON.parse(localStorage.getItem("completedRecords") || "[]");
     }
 
     function displayRecords(records) {
-      currentFilteredRecords = records;
       const tbody = document.getElementById("recordTable");
       tbody.innerHTML = "";
       records.forEach(record => {
         const row = document.createElement("tr");
         row.innerHTML = `
           <td class="p-2 border">${record.date}</td>
-          <td class="p-2 border">${record.carNumber}</td>
-          <td class="p-2 border">${record.company || ''}</td>
-          <td class="p-2 border">${record.tankNumber || ''}</td>
           <td class="p-2 border">${record.duration}</td>
-          <td class="p-2 border">${record.remarks || ''}</td>
+          <td class="p-2 border">${record.location || ""}</td>
+          <td class="p-2 border">${record.mode || ""}</td>
+          <td class="p-2 border">${record.carNumber}</td>
+          <td class="p-2 border">${record.company || ""}</td>
+          <td class="p-2 border">${record.brand || ""}</td>
+          <td class="p-2 border">${record.tankNumber || ""}</td>
+          <td class="p-2 border">${record.remarks || ""}</td>
         `;
         tbody.appendChild(row);
       });
     }
 
     function filterRecords() {
-      const dateFrom = document.getElementById("searchDateFrom").value;
-      const dateTo = document.getElementById("searchDateTo").value;
+      const from = document.getElementById("searchFrom").value;
+      const to = document.getElementById("searchTo").value;
       const car = document.getElementById("searchCar").value.trim();
       const company = document.getElementById("searchCompany").value.trim();
       const tank = document.getElementById("searchTank").value.trim();
 
-      let records = loadRecords();
-      records = records.filter(r => {
-        return (!dateFrom || r.date >= dateFrom)
-          && (!dateTo || r.date <= dateTo)
-          && (!car || r.carNumber.includes(car))
-          && (!company || (r.company || '').includes(company))
-          && (!tank || (r.tankNumber || '').includes(tank));
+      const all = loadRecords();
+      const filtered = all.filter(r => {
+        const matchDate = (!from || r.date >= from) && (!to || r.date <= to);
+        const matchCar = !car || r.carNumber.includes(car);
+        const matchCompany = !company || (r.company && r.company.includes(company));
+        const matchTank = !tank || (r.tankNumber && r.tankNumber.includes(tank));
+        return matchDate && matchCar && matchCompany && matchTank;
       });
+
       if (currentSortKey) {
-        records.sort(sortByKey(currentSortKey, currentSortAsc));
+        filtered.sort((a, b) => {
+          if (a[currentSortKey] < b[currentSortKey]) return currentSortAsc ? -1 : 1;
+          if (a[currentSortKey] > b[currentSortKey]) return currentSortAsc ? 1 : -1;
+          return 0;
+        });
       }
-      displayRecords(records);
+
+      displayRecords(filtered);
     }
 
-    function sortTable(key) {
+    function sortBy(key) {
       if (currentSortKey === key) {
         currentSortAsc = !currentSortAsc;
       } else {
@@ -127,54 +70,80 @@
       filterRecords();
     }
 
-    function sortByKey(key, asc = true) {
-      return function(a, b) {
-        let valA = a[key] || '';
-        let valB = b[key] || '';
-        if (key === 'duration') {
-          const toSec = str => {
-            const [h, m] = str.split(":").map(Number);
-            return h * 60 + m;
-          };
-          valA = toSec(valA);
-          valB = toSec(valB);
-        }
-        if (valA < valB) return asc ? -1 : 1;
-        if (valA > valB) return asc ? 1 : -1;
-        return 0;
-      };
+    function toggleAdvancedSearch() {
+      const adv = document.getElementById("advancedSearch");
+      adv.classList.toggle("hidden");
     }
 
-    function exportCSV() {
-      if (!currentFilteredRecords.length) return alert("出力対象データがありません。");
-      const header = ["日付","車両番号","運送会社","タンクNo.","経過時間","備考"];
-      const rows = currentFilteredRecords.map(r => [
-        r.date, r.carNumber, r.company || '', r.tankNumber || '', r.duration, r.remarks || ''
-      ]);
-      const csvContent = [header, ...rows].map(e => e.map(v => `"${v}"`).join(",")).join("\n");
-      const blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
-      const url = URL.createObjectURL(blob);
-      const link = document.createElement("a");
-      link.setAttribute("href", url);
-      link.setAttribute("download", "completed_records.csv");
-      link.click();
+    window.onload = () => {
+      filterRecords();
     }
-
-    function copyToClipboard() {
-      if (!currentFilteredRecords.length) return alert("コピー対象データがありません。");
-      const header = ["日付","車両番号","運送会社","タンクNo.","経過時間","備考"];
-      const rows = currentFilteredRecords.map(r => [
-        r.date, r.carNumber, r.company || '', r.tankNumber || '', r.duration, r.remarks || ''
-      ]);
-      const text = [header, ...rows].map(row => row.join("\t")).join("\n");
-      navigator.clipboard.writeText(text).then(() => {
-        alert("一覧データをクリップボードにコピーしました。");
-      }).catch(err => {
-        alert("コピーに失敗しました：" + err);
-      });
-    }
-
-    window.onload = () => filterRecords();
   </script>
+</head>
+<body class="bg-gray-100 p-4 text-sm">
+  <div class="max-w-7xl mx-auto bg-white p-4 rounded-xl shadow">
+    <h1 class="text-lg font-bold mb-4 text-center">✅ 完了済み一覧</h1>
+
+    <!-- 検索条件エリア -->
+    <div class="space-y-2 mb-4">
+      <div class="flex flex-wrap items-center gap-2">
+        <label class="text-gray-700 font-semibold">📅 日付</label>
+        <input id="searchFrom" type="date" class="p-2 border rounded" />
+        <span class="text-gray-600">〜</span>
+        <input id="searchTo" type="date" class="p-2 border rounded" />
+        <button onclick="toggleAdvancedSearch()" class="ml-4 text-blue-600 underline">+ 詳細検索</button>
+      </div>
+
+      <div id="advancedSearch" class="hidden grid grid-cols-1 md:grid-cols-3 lg:grid-cols-6 gap-2">
+        <select id="searchLocation" class="p-2 border rounded">
+          <option value="">📍 場所を選択</option>
+          <option value="清水工場">清水工場</option>
+          <option value="鹿島工場">鹿島工場</option>
+          <option value="石巻工場">石巻工場</option>
+        </select>
+        <select id="searchMode" class="p-2 border rounded">
+          <option value="">📦 出荷 or 受入</option>
+          <option value="出荷">出荷</option>
+          <option value="受入">受入</option>
+        </select>
+        <input id="searchCar" type="text" class="p-2 border rounded w-full" placeholder="🚚 車両番号で検索" />
+        <input id="searchCompany" type="text" class="p-2 border rounded w-full" placeholder="🏢 運送会社で検索" />
+        <input id="searchBrand" type="text" class="p-2 border rounded w-full" placeholder="🧪 銘柄で検索" />
+        <input id="searchTank" type="text" class="p-2 border rounded w-full" placeholder="🛢 タンクNo.で検索" />
+      </div>
+
+      <div class="flex flex-wrap gap-2 mt-2">
+        <button onclick="filterRecords()" class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600">← 検索する</button>
+        <button onclick="copyToClipboard()" class="bg-yellow-500 text-white py-2 px-4 rounded hover:bg-yellow-600">📋 クリップボード出力</button>
+      </div>
+    </div>
+
+    <!-- 一覧テーブル -->
+    <div class="overflow-x-auto">
+      <table class="min-w-full table-auto border text-sm">
+        <thead>
+          <tr class="bg-gray-200 text-left">
+            <th class="p-2 border cursor-pointer" onclick="sortBy('date')">日付</th>
+            <th class="p-2 border cursor-pointer" onclick="sortBy('duration')">計測時間</th>
+            <th class="p-2 border cursor-pointer" onclick="sortBy('location')">場所</th>
+            <th class="p-2 border cursor-pointer" onclick="sortBy('mode')">出荷/受入</th>
+            <th class="p-2 border cursor-pointer" onclick="sortBy('carNumber')">車両番号</th>
+            <th class="p-2 border cursor-pointer" onclick="sortBy('company')">運送会社</th>
+            <th class="p-2 border cursor-pointer" onclick="sortBy('brand')">銘柄</th>
+            <th class="p-2 border cursor-pointer" onclick="sortBy('tankNumber')">タンクNo.</th>
+            <th class="p-2 border cursor-pointer" onclick="sortBy('remarks')">備考</th>
+          </tr>
+        </thead>
+        <tbody id="recordTable">
+          <!-- 動的に挿入 -->
+        </tbody>
+      </table>
+    </div>
+
+    <!-- 戻るリンク -->
+    <div class="mt-4 text-center">
+      <a href="index.html" class="text-blue-600 underline">← 記録画面に戻る</a>
+    </div>
+  </div>
 </body>
 </html>
