--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
   <title>トラック荷待ち時間記録</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    // キャッシュバスティング処理（初回起動時に自動実行）
-    const CACHE_VERSION = 'v20240722-11';
+    const CACHE_VERSION = 'v20240722-12';
     const LAST_CACHE = localStorage.getItem('mock_cache_version');
     if (LAST_CACHE !== CACHE_VERSION) {
       localStorage.setItem('mock_cache_version', CACHE_VERSION);
       window.location.href = window.location.href.split('?')[0] + '?v=' + CACHE_VERSION;
     }
 
-    // 仮想ログインユーザの所属場所（将来はログイン情報と連携）
     const CURRENT_USER_LOCATION = '清水工場';
 
     window.addEventListener('DOMContentLoaded', () => {
@@ -54,10 +52,11 @@
 
     <!-- 入力フォーム -->
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-      <div class="flex items-center gap-4 px-2">
-        <label><input type="radio" name="mode" value="出荷" checked class="mr-1" /> 出荷</label>
-        <label><input type="radio" name="mode" value="受入" class="mr-1" /> 受入</label>
-      </div>
+      <select id="modeSelect" class="w-full p-4 text-xl md:text-base border rounded">
+        <option value="">📦 出荷 or 受入</option>
+        <option value="出荷">出荷</option>
+        <option value="受入">受入</option>
+      </select>
 
       <input id="carNumber" class="w-full p-4 text-xl md:text-base border rounded" placeholder="🚚 車両番号 (必須)" />
     </div>
@@ -103,6 +102,8 @@
       </div>
     </div>
   </div>
+</body>
+</html>
 
 <script>
 function startTimer() {
