--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>トラック荷待ち時間記録</title>
+  <title>荷待時間計測</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     const CACHE_VERSION = 'v20240722-14';
@@ -148,7 +148,7 @@
   <div class="max-w-4xl mx-auto bg-white p-6 rounded-xl shadow space-y-6">
     <div class="flex justify-between items-center">
       <div>
-        <h1 class="text-2xl lg:text-xl font-bold text-blue-800">トラック荷待ち時間記録</h1>
+        <h1 class="text-2xl lg:text-xl font-bold text-blue-800">荷待時間計測</h1>
         <div class="text-sm text-gray-500">📍 所属：<span id="locationDisplay"></span></div>
       </div>
       <div class="flex items-center gap-3">
