--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>トラック荷待ち時間記録</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    const CACHE_VERSION = 'v20240722-15';
+    const CACHE_VERSION = 'v20240722-16';
     const LAST_CACHE = localStorage.getItem('mock_cache_version');
     if (LAST_CACHE !== CACHE_VERSION) {
       localStorage.setItem('mock_cache_version', CACHE_VERSION);
@@ -36,8 +36,8 @@
       const remarks = document.getElementById("remarks").value;
       const brand = document.getElementById("brand").value;
 
-      const now = new Date();
-      const dateStr = now.toISOString().split("T")[0];
+      const startTime = new Date();
+      const dateStr = startTime.toISOString().split("T")[0];
 
       const container = document.createElement("div");
       container.className = "bg-gray-100 border border-blue-200 p-4 rounded-lg flex flex-col gap-2";
@@ -118,6 +118,7 @@
 
       stopBtn.addEventListener("click", () => {
         clearInterval(interval);
+        const endTime = new Date();
         container.remove();
         const record = {
           carNumber,
@@ -128,6 +129,8 @@
           brand,
           mode,
           date: dateStr,
+          startTime: startTime.toLocaleTimeString(),
+          endTime: endTime.toLocaleTimeString(),
           duration: label.querySelector("#time").textContent
         };
         const data = JSON.parse(localStorage.getItem("completedRecords") || "[]");
@@ -146,7 +149,6 @@
 </head>
 <body class="bg-gray-100 p-6 text-base">
   <div class="max-w-4xl mx-auto bg-white p-6 rounded-xl shadow space-y-6">
-    <!-- ヘッダ部分をモバイル対応 -->
     <div class="flex flex-col md:flex-row md:justify-between md:items-center gap-2 md:gap-0 text-center md:text-left">
       <div>
         <h1 class="text-2xl lg:text-xl font-bold text-blue-800">トラック荷待ち時間記録</h1>
